--- a/src/packages/apps/Updater/res/values/strings.xml
+++ b/src/packages/apps/Updater/res/values/strings.xml
@@ -7,7 +7,7 @@
   <string name="download_whole_rom">Download full ROM <xliff:g id="SIZE">(%s)</xliff:g></string>
   <string name="download_ota_rom">Download the OTA update <xliff:g id="SIZE">(%s)</xliff:g></string>
   <string name="apply_later_button_text">Apply later</string>
-  <string name="switch_system">Reboot recovery</string>
+  <string name="switch_system">Switch system</string>
   <string name="start_update">Begin update</string>
   <string name="applying_update">Applying the update...<xliff:g id="PROGRESS">%s</xliff:g></string>
   <string name="apply_update_guide">Updating in background, does not affect normal use</string>
