Translated untranslated strings on AntiSpam Translated MiuiSettings New readme

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This is a place holder, please fill in real text when you add stuff.
+MIUI 한국어화 프로젝트 입니다.
+
+직접 번역을 하고있기도 하고 Raspberry(http://miuiraspberry.tistory.com)님의 번역을 사용중이기도 합니다.
+
+프로젝트 진행자: iAmGhost (http://iamghost.kr)
