--- a/src/packages/apps/AntiSpam/res/values-ko/strings.xml
+++ b/src/packages/apps/AntiSpam/res/values-ko/strings.xml
@@ -23,8 +23,8 @@
     <string name="fw_advanced_settings">고급 설정</string>
     <string name="anti_stranger_title">Anti-Stranger 모드</string>
     <string name="anti_stranger_summary">연락처에 없는 번호는 처음 몇 초동안 무음으로</string>
-    <string name="anti_private_title">拦截空号码来电</string>
-    <string name="anti_private_summary">拦截私人号码等空号码来电</string>
+    <string name="anti_private_title">발신자 표시 제한 전화 차단</string>
+    <string name="anti_private_summary">발신자 번호를 숨긴 전화를 차단하고 기록합니다.</string>
     <string name="fw_keyword_filter">스팸문구 필터</string>
     <string name="fw_keyword_filter_summary">차단문구를 설정하여 스팸메시지 차단</string>
     <string name="fw_set_keyword">차단문구 설정</string>
