Translated MiuiHome Modified MiuiSettings about Guard Mode Translated Framework Translated ThemeManager Translated MiuiGallery images Translated MiuiMusic Translated ThemeManager

--- a/src/packages/apps/MiuiSettings/res/values-ko/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-ko/strings.xml
@@ -32,11 +32,11 @@
     <string name="haptic_feedback_level">진동 강도</string>
 
     <!-- Privacy protection: Privacy mode &  Access Control -->
-    <string name="privacy_protect_title">개인정보 보호</string>
-    <string name="privacy_mode_enable_title">보호 모드 활성화</string>
+    <string name="privacy_protect_title">비밀 모드</string>
+    <string name="privacy_mode_enable_title">비밀 모드 활성화</string>
     <string name="ac_enable_title">접근 제어 활성화</string>
     <string name="ac_set_apps_title">어플리케이션 보호</string>
-    <string name="ac_privacy_mode_title">보호 모드</string>
+    <string name="ac_privacy_mode_title">비밀 모드</string>
     <string name="access_control_password_title">비밀번호 활성화</string>
     <string name="access_control_apps_title">어플리케이션 접근 수정</string>
     <string name="access_control_need_to_unlock">잠금 해제를 위해 비밀번호가 필요합니다.</string>
