--- a/src/packages/apps/MiuiHome/res/values-ko/strings.xml
+++ b/src/packages/apps/MiuiHome/res/values-ko/strings.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- 
+<?xml version="1.0" encoding="utf-8"?>
+<!--
 /*
 * Copyright (C) 2008 The Android Open Source Project
 *
@@ -15,33 +15,197 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
- -->
+-->
 
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="application_name" msgid="8424725141379931883">"Launcher"</string>
-    <string name="folder_name" msgid="4588446541914685904">"폴더"</string>
-    <string name="chooser_wallpaper" msgid="5988031014201479733">"배경화면 선택"</string>
-    <string name="activity_not_found" msgid="3571057450431950427">"휴대전화에 설치되어 있지 않은 애플리케이션입니다."</string>
-    <string name="cancel_action" msgid="3811860427489435048">"취소"</string>
-    <string name="menu_item_add_item" msgid="6233177331075781114">"홈 화면에 추가"</string>
-    <string name="group_shortcuts" msgid="9133529424900391877">"바로가기"</string>
-    <string name="group_folder" msgid="5143593791798929193">"새 폴더"</string>
-    <string name="group_live_folders" msgid="2664945399140647217">"폴더"</string>
-    <string name="out_of_space" msgid="8365249326091984698">"홈 화면에 더 이상 공간이 없습니다."</string>
-    <string name="title_select_shortcut" msgid="2858897527672831763">"바로가기 선택"</string>
-    <string name="title_select_live_folder" msgid="3753447798805166749">"폴더 선택"</string>
-    <string name="menu_add" msgid="3065046628354640854">"추가"</string>
-    <string name="menu_wallpaper" msgid="5837429080911269832">"배경화면"</string>
-    <string name="menu_search" msgid="4826514464423239041">"검색"</string>
-    <string name="menu_settings" msgid="6233960148378443661">"설정"</string>
-    <string name="permlab_install_shortcut" msgid="1201690825493376489">"바로가기 설치"</string>
-    <string name="permdesc_install_shortcut" msgid="7429365847558984148">"애플리케이션이 사용자의 작업 없이 바로가기를 추가할 수 있도록 합니다."</string>
-    <string name="permlab_uninstall_shortcut" msgid="7696645932555926449">"바로가기 제거"</string>
-    <string name="permdesc_uninstall_shortcut" msgid="959972195916090900">"애플리케이션이 사용자의 작업 없이 바로가기를 삭제할 수 있도록 합니다."</string>
-    <string name="permlab_read_settings" msgid="3452408290738106747">"홈 설정 및 바로가기 읽기"</string>
-    <string name="permdesc_read_settings" msgid="8377434937176025492">"애플리케이션이 홈에 있는 설정 및 바로가기를 읽을 수 있도록 합니다."</string>
-    <string name="permlab_write_settings" msgid="1360567537236705628">"홈 설정 및 바로가기 쓰기"</string>
-    <string name="permdesc_write_settings" msgid="1098648778383349818">"애플리케이션이 홈에 있는 설정 및 바로가기를 변경할 수 있도록 합니다."</string>
-    <string name="gadget_error_text" msgid="8359351016167075858">"위젯을 로드하는 중 문제가 발생했습니다."</string>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Manifest configuration. -->
+    <skip />
+    <!-- Do not translate. android:sharedUserId of this application. -->
+    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
+    <!-- Do not translate. android:process of this application. -->
+    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
+
+    <!-- General -->
+    <skip />
+    <!-- Application name -->
+    <string name="application_name">Miui 홈</string>
+    <!-- Name for all applications running as this uid. -->
+    <!-- Default folder name -->
+    <string name="folder_name">폴더</string>
+    <!-- Title of dialog that appears after user selects Wallpaper from menu -->
+    <string name="chooser_wallpaper">배경화면 선택</string>
+    <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
+    <!-- Option in "Select wallpaper from" dialog box -->
+    <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
+    <string name="activity_not_found">해당 어플리케이션이 설치되어 있지 않습니다.</string>
+    <!-- List item for configuring the current wallpaper -->
+
+    <!-- Folders -->
+    <skip />
+    <!-- Label of Folder name field in Rename folder dialog box -->
+    <!-- Title of dialog box -->
+    <!-- Buttons in Rename folder dialog box -->
+    <!-- Buttons in Rename folder dialog box -->
+    <string name="cancel_action">취소</string>
+
+    <!-- Shortcuts -->
+    <skip />
+    <!-- Title of dialog box -->
+    <string name="menu_item_add_item">홈 화면에 추가</string>
+    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
+    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
+    <string name="group_shortcuts">바로가기</string>
+    <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
+    <string name="group_folder">새 폴더</string>
+    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
+    <string name="group_live_folders">폴더</string>
+    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
+    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of apps that can set the wallpaper-->
+    <!-- Options in "Add to Home" dialog box; Name of the Folder widget-->
+    <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
+    <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
+    <!-- Error message when user has filled a home screen, possibly not used -->
+    <string name="out_of_space">이 홈 화면에 더이상 공간이 없습니다.</string>
+    <!-- Message displayed when a shortcut is created by an external application -->
+    <!-- Message displayed when a shortcut is uninstalled by an external application -->
+    <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
+
+    <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
+    <string name="title_select_shortcut">바로가기 선택</string>
+    <!-- Title of dialog when user is selecting live folder to add to homescreen -->
+    <string name="title_select_live_folder">폴더 선택</string>
+
+    <!-- All applications label for accessibilty (spoken when the button gets focus). -->
+    <!-- Label for button in all applications label to go back home (to the workspace / desktop)
+         for accessibilty (spoken when the button gets focus). -->
+
+    <!-- Menus items: -->
+    <skip />
+    <!-- Verb, menu item used to add an item on the desktop -->
+    <string name="menu_add">추가</string>
+    <!-- Noun, menu item used to set the desktop's wallpaper -->
+    <string name="menu_wallpaper">배경화면</string>
+    <!-- Verb, menu item used to initiate global search -->
+    <string name="menu_search">검색</string>
+    <!-- Noun, menu item used to bring down the notifications shade -->
+    <string name="menu_workspace_preview">미리보기</string>
+    <string name="menu_back_desktop">홈으로 돌아가기</string>
+    <!-- Noun, menu item used to show the gestures settings -->
+    <!-- Noun, menu item used to show the system settings -->
+    <string name="menu_settings">설정</string>
+
+    <!-- Permissions: -->
+    <skip />
+    <!-- Permission short label -->
+    <string name="permlab_install_shortcut">바로가기 설치</string>
+    <!-- Permission description -->
+    <string name="permdesc_install_shortcut">어플리케이션이 사용자 동의 없이
+        바로가기를 설치할 수 있습니다.</string>
+    <!-- Permission short label -->
+    <string name="permlab_uninstall_shortcut">바로가기 삭제</string>
+    <!-- Permission description -->
+    <string name="permdesc_uninstall_shortcut">어플리케이션이 사용자 동의 없이
+        바로가기를 삭제할 수 있습니다.</string>
+    <!-- Permission short label -->
+    <string name="permlab_read_settings">홈 설정과 바로가기 읽기ts</string>
+    <!-- Permission description -->
+    <string name="permdesc_read_settings">어플리케이션이 홈 화면과 바로가기에 대한 정보를
+        읽을 수 있습니다.</string>
+    <!-- Permission short label -->
+    <string name="permlab_write_settings">바로가기와 홈 설정 변경</string>
+    <!-- Permission description -->
+    <string name="permdesc_write_settings">어플리케이션이 홈 화면의 설정이나 바로가기를
+       변경할 수 있습니다.</string>
+
+    <!-- Widgets: -->
+    <skip />
+
+    <!-- ADD BY LIBRA -->
+    <string name="start_activity_failed">실행에 실패하였습니다. 다시 시도해주세요</string>
+    <string name="gadget_error_text">위젯 불러오기 실패</string>
+    <string name="menu_edit">위젯 편집</string>
+    <string name="menu_sort">홈 화면 아이콘 정렬</string>
+    <string name="menu_launcher_setting">런쳐 설정</string>
+    <string name="editing_tips">위젯 추가와 변경</string>
+    <string name="cant_remove_system_app">시스템 어플리케이션은 삭제할 수 없습니다.</string>
+    <string name="cant_remove_retained_app">통신사 어플리케이션은 삭제할 수 없습니다.</string>
+    <string name="uninstall_body_format">\"%s\" 어플리케이션을 제거하시겠습니까?</string>
+    <string name="uninstall">삭제</string>
+    <string name="install_body_format">\"%s\" 어플리케이션을 설치하시겠습니까?</string>
+    <string name="install">설치</string>
+    <string name="cant_remove_folder">비어있지 않은 폴더를 제거할 수 없습니다.</string>
+    <string name="failed_to_drop">이동 실패</string>
+    <string name="failed_to_drop_widget_nospace">충분한 공간이 없어 이동할 수 없습니다!</string>
+    <string name="failed_to_drop_widget_invalid">올바르지 않은 위젯</string>
+    <string name="failed_to_delete_temporary">삭제에 실패했습니다. 다시 시도해주세요.</string>
+    <string name="widget_favorite_contacts_label">즐겨찾는 연락처</string>
+    <string name="widget_favorite_contacts_edit">편집기</string>
+    <string name="widget_favorite_contacts_style">크기 변경</string>
+    <string name="edit_folder_title">"폴더 이름 변경"</string>
+    <string name="confirm_btn_label">"확인"</string>
+    <string name="cancel_btn_label">"삭제"</string>
+    <string name="sort_by_not_defined">기본 정렬</string>
+    <string name="sort_by_frequency">사용 빈도별 정렬</string>
+    <string name="sort_by_abc">이름별 정렬</string>
+    <string name="encryption">암호화</string>
+    <string name="default_folder_title_tools">도구</string>
+    <string name="default_folder_title_recommend">추천</string>
+
+    <string name="preferences_title">런쳐 설정</string>
+    <string name="preferences_general_title">기본 설정</string>
+    <string name="pref_keep_in_memory_title">메모리에 유지</string>
+    <string name="pref_keep_in_memory_summary">남은 메모리가 적어도 꺼지지 않게 합니다.</string>
+    <string name="pref_render_in_truecolor_title">고화질 그래픽</string>
+    <string name="pref_render_in_truecolor_summary">이 옵션을 끄면 표시 성능이 향상됩니다.</string>
+    <string name="pref_enable_drawing_cache_title">캐쉬 저장</string>
+    <string name="pref_enable_drawing_cache_summary">이 옵션을 끄면 메모리를 덜 사용하지만 버벅거릴 수 있습니다.</string>
+    <string name="pref_icon_shadow_title">아이콘 그림자</string>
+    <string name="pref_icon_shadow_summary">홈 화면 아이콘의 그림자를 끄거나 켭니다.</string>
+    <string name="pref_screen_transformation_type_title">전환 효과</string>
+    <string name="transformation_type_classic">기본</string>
+    <string name="transformation_type_classic_no_overshoot">기본 (튕김효과 없음)</string>
+    <string name="transformation_type_crossfade">투명도 전환</string>
+    <string name="transformation_type_falldown">떨어짐</string>
+    <string name="transformation_type_cube">3D 큐브</string>
+    <string name="transformation_type_leftpage">페이지</string>
+    <string name="transformation_type_stack">쌓기</string>
+    <string name="transformation_type_rotate">회전</string>
+    <string name="pref_wallpaper_scroll_type_title">배경화면 스크롤 유형</string>
+
+    <string name="widget_gadget_player">음악</string>
+    <string name="buffering">버퍼링 중...</string>
+    <string name="emptyplaylist">재생목록이 비어있습니다.</string>
+    <string name="unknown_artist_name">알 수 없는 아티스트</string>
+
+    <string name="global_search_hint">검색할 것을 입력하세요.</string>
+    <string name="widget_global_search">전체 검색</string>
+
+    <string name="gadget_clock_12_label">시계 1x2</string>
+    <string name="gadget_clock_22_label">시계 2x2</string>
+    <string name="gadget_clock_24_label">시계 2x4</string>
+
+    <string name="gadget_photo_44_label">사진 액자 4x4</string>
+    <string name="gadget_photo_22_label">사진 액자 2x2</string>
+    <string name="gadget_photo_24_label">사진 액자 2x4</string>
+
+    <string name="gadget_load_error">위젯 불러오는 중...</string>
+
+    <string name="invalid_contact_shortcut">올바르지 않은 연락처 바로가기</string>
+
+    <string name="guide_tips_editing_mode">아래의 위젯을 화면에 드래그 하세요.H</string>
+
+    <!-- Do not translate. Duration format for duration < 1 hour -->
+    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$2d:%5$02d</xliff:g></string>
+    <!-- Do not translate. Duration format for duration < 1 hour -->
+    <string translatable="false" name="durationformatshort_padding_with_0"><xliff:g id="format">%2$02d:%5$02d</xliff:g></string>
+    <!-- Do not translate. Duration format for duration >= 1 hour -->
+    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
+
+    <!-- Adjust photo -->
+    <string name="photo_adjust">사진 편집</string>
+    <string name="select_photo">사진</string>
+    <string name="select_frame">액자</string>
+    <string name="photo_confirm">확인</string>
+    <string name="photo_load_failed">사진 불러오기 실패!</string>
+    <!-- END of ADD BY LIBRA -->
 </resources>
