Updated framework translation Updated readme

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 MIUI 한국어화 프로젝트 입니다.
 
-직접 번역을 하고있기도 하고 Raspberry(http://miuiraspberry.tistory.com)님의 번역을 사용중이기도 합니다.
+기본적으로는 iAmGhost 가 진행중이지만 Raspberry님의 번역을 많이 참고중입니다.
 
-프로젝트 진행자: iAmGhost (http://iamghost.kr)
+프로젝트 진행자:
+iAmGhost - http://iamghost.kr
+Raspberry - http://miuiraspberry.tistory.com
