--- a/src/frameworks/miui/core/res/res/values-ko/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-ko/strings.xml
@@ -440,12 +440,12 @@
         <item>Z</item>
     </string-array>
 
-    <string name="caller_info_name_delimiter">Or</string>
+    <string name="caller_info_name_delimiter">혹은</string>
 
      <!-- EditableListView -->
-    <string name="delete"> Delete </string>
-    <string name="select_all">Select all</string>
-    <string name="reverse_all">Clear all</string>
-    <string name="multi_select_title">Selected <xliff:g id="number" example="15">%1$s</xliff:g> item(s)</string>
+    <string name="delete"> 삭제 </string>
+    <string name="select_all">전체 선택</string>
+    <string name="reverse_all">전체선택 해제</string>
+    <string name="multi_select_title"><xliff:g id="number" example="15">%1$s</xliff:g>개의 항목 선택됨</string>
 
 </resources>
