Updated DeskClock strings Updated Updater strings

--- a/src/packages/apps/DeskClock/res/values-ko/strings.xml
+++ b/src/packages/apps/DeskClock/res/values-ko/strings.xml
@@ -127,4 +127,52 @@
     <string name="loading_ringtone" msgid="6523322777415268044">"벨소리 로드 중…"</string>
     <string name="control_set_alarm" msgid="2194676418924016327">"알람 설정"</string>
     <string name="control_set_alarm_with_existing" msgid="1128169496817859490">"알람 설정: <xliff:g id="TIME">%s</xliff:g>"</string>
+    
+    <!--MIUI Customized feature related strings-->
+    <string name="worldclock_title">세계시계</string>
+    <string name="stopwatch_title">스탑워치</string>
+    <string name="timer_title">타이머</string>
+
+    <string name="menu_add_worldclock">시간대 추가</string>
+    <string name="menu_worldclock_edit">세계시계 편집</string>
+    <string name="menu_alarmclock_edit">알람시계 편집</string>
+    <string name="menu_delete">삭제</string>
+    <string name="menu_edit_systemtime">시스템 시간 편집</string>
+    <string name="menu_alarm_setting">알람 설정</string>
+    <string name="delete_timezone_title">시간대 삭제</string>
+    <string name="delelte_selected_timezone">정말로 선택한 시간대를 삭제하시겠습니까?</string>
+    <string name="wait_when_operating_data_message">처리중입니다. 잠시만 기다려주세요.</string>
+
+    <string name="timezone_exist_error_message">해당 시간대가 이미 있어 추가에 실패하였습니다.</string>
+    <string name="timezone_search_hint">세계시계에 추가할 도시를 검색하세요.</string>
+
+    <string-array name="alarm_in_furture">
+        <item>1분 이내로 알람이 울립니다.</item>
+        <item><xliff:g id="DAYS" example="2 days">%1$s</xliff:g>일 후에 알람이 울립니다.</item>
+        <item><xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>시간 후에 알람이 울립니다.</item>
+        <item><xliff:g id="DAYS" example="2 days">%1$s</xliff:g>일 <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>시간 후에 알람이 울립니다.</item>
+        <item><xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g>분 후에 알람이 울립니다.</item>
+        <item><xliff:g id="DAYS" example="2 days">%1$s</xliff:g>일 <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g>분 후에 알람이 울립니다.</item>
+        <item><xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>시간 <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g>분 후에 알람이 울립니다.</item>
+        <item><xliff:g id="DAYS" example="2 days">%1$s</xliff:g>일 <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>시간 <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g>분 후에 알람이 울립니다.</item>
+    </string-array>
+
+    <string name="alarm_disabled">비활성화</string>
+    <string name="alarm_ascending_mode_title">알람소리 점점 커지게</string>
+    <string name="alarm_ascending_mode_summary">알람이 설정한 볼륨까지 서서히 커집니다.</string>
+
+    <string name="slide_down_delelte_alarm">아래로 밀어 알람 끄기</string>
+
+    <string-array name="days">
+      <item>어제</item>
+      <item>오늘</item>
+      <item>내일</item>
+    </string-array>
+
+    <string name="start">시작</string>
+    <string name="pause">일시정지</string>
+    <string name="reset">초기화</string>
+    <string name="lap">랩</string>
+
+    <string name="elapsed_hour"><xliff:g id="hour">%d</xliff:g>시간</string>
 </resources>
