--- a/src/packages/apps/Updater/res/values-ko/strings.xml
+++ b/src/packages/apps/Updater/res/values-ko/strings.xml
@@ -65,11 +65,12 @@
   <string name="exception_while_downloading">다운로드 오류</string>
   <string name="new_updates_found_notification_title">새 버전이 있습니다. 업데이트하세요!</string>
   <string name="network_error">접속할 수 없습니다. 인터넷 연결에 문제가 있거나 서버 과부하인 것 같습니다.</string>
-  <string name="stable_version">정식</string>
-  <string name="test_version">베타</string>
+  <string name="monthly_build">월간 빌드</string>
+  <string name="weekly_build">주간 빌드</string>
+  <string name="daily_build">일간 빌드</string>
   <string name="about_device">휴대전화 정보</string>
 
-  <string name="emegency_version">버전:</string>
+  <string name="emegency_build">빌드:</string>
   <string name="wifi_not_available_title">Wi-Fi로 연결되지 않음</string>
   <string name="wifi_not_available_body">ROM 파일을 다운로드할 때 데이터 통화료가 많이 나올 수 있으므로 Wi-Fi로 다운로드 하는 것을 권장합니다. Wi-Fi에 연결되지 않은 것 같습니다. 다운로드를 계속
   <string name="boot_recovery">복구 모드로 재부팅</string>
@@ -94,7 +95,7 @@
   <string name="install_whole_rom">전체 ROM 다운로드를 권장합니다.</string>
   <string name="check_update_policy">업데이트 확인 설정</string>
   <string name="check_update_when_wifi_available">Wi-Fi로 연결되었을 경우에만 업데이트 확인</string>
-  <string name="update_stable_version_only">안정 버전으로만 업데이트</string>
+  <string name="update_monthly_build_only">월간 업데이트만 적용</string>
   <string name="install_file_explorer">파일탐색기를 설치하세요.</string>
 
   <string name="share_update">시스템 설정 공유</string>
