--- a/src/packages/apps/MiuiSettings/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rCN/strings.xml
@@ -118,4 +118,6 @@
     <string name="led_pulse_summary">在收到新通知时，LED指示灯会不断闪动</string>
     <string name="show_rounded_corners">屏幕顶点显示为圆角</string>
     <string name="show_rounded_corners_summary">重启系统后才起作用</string>
+    <string name="show_all_anrs">"显示所有“应用程序无响应”"</string>
+    <string name="show_all_anrs_summary">"为后台应用程序显示“应用程序无响应”(ANR)对话框"</string>
 </resources>
