--- a/src/packages/apps/MiuiSettings/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rCN/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="debug_log">调试日志</string>
     <string name="upload_debug_log_title">允许上传调试日志</string>
-    <string name="upload_debug_log_summary">仅在wifi连接可用情况下，上传调试日志以帮助MIUI开发更加稳定好用的ROM</string>
+    <string name="upload_debug_log_summary">仅在WLAN连接可用情况下，上传调试日志以帮助MIUI开发更加稳定好用的ROM</string>
 
     <string name="sound_settings" msgid="5534671337768745343">"声音和振动"</string>
 
