--- a/src/packages/apps/MiuiSettings/res/values/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="debug_log">Debug log</string>
     <string name="upload_debug_log_title">Upload debug log</string>
-    <string name="upload_debug_log_summary">Upload debug log only when wifi connection available to help MIUI team develop a more stable ROM.</string>
+    <string name="upload_debug_log_summary">Upload debug log only when WLAN connection available to help MIUI team develop a more stable ROM.</string>
 
     <!-- About phone screen, status item label -->
     <string name="firmware_version">Android version:</string>
@@ -139,8 +139,4 @@
     <string name="apn_new">New access point</string>
     <string name="apn_save">Save or not</string>
     <string name="apn_save_msg">This APN has been changed, do you want to save?</string>
-
-    <!-- Default input method settings --> 
-    <string name="default_input_method">Default input method</string>
-    <string name="default_input_method_summary">Current input method is <xliff:gid="default_input_method_description">%1$s</xliff:g></string>
 </resources>
