--- a/src/packages/apps/MiuiSettings/res/values/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values/strings.xml
@@ -111,7 +111,6 @@
     <string name="incoming_call_vibrate_abbreviation">Calls</string>
     <string name="notification_vibrate_abbreviation">Notification</string>
     <string name="mms_vibrate_abbreviation">Messages</string>
-    <string name="notification_pulse_summary">When new notification is received, pulse notifiation LED</string>
     <!-- Sound settings screen, breathing light color title -->
     <string name="breathing_light_color_title">LED color</string>
     <!-- Sound settings screen, breathing light color summary TODO: find a better way to say this...-->
@@ -123,7 +122,7 @@
     <string name="led_settings">LED</string>
     <string name="led_colors_summary">Notification LED color</string>
     <string name="led_frequence_summary">Set the interval between LED flashes</string>
-    <string name="led_pulse_summary">Pulse LED on new notifications</string>
+    <string name="led_pulse_summary">When new notification is received, pulse notifiation LED</string>
     <string name="show_rounded_corners">Show rounded corners</string>
     <string name="show_rounded_corners_summary">Reboot is needed to take effect</string>
     <string name="pref_operational_key">Operational key</string>
