MIUI西班牙 translations added.

--- a/src/packages/apps/CloudService/res/values/strings.xml
+++ b/src/packages/apps/CloudService/res/values/strings.xml
@@ -1,117 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Xiaomi Account Manager</string>
-    <string name="sync_settings">Accounts &amp; sync settings</string>
-    <string name="service_name">Xiaomi Account Verification</string>
+    <string name="app_name">Administración de cuentas Xiaomi</string>
+    <string name="sync_settings">Ajustes de cuentas y sincronización</string>
+    <string name="service_name">Autentificación de cuentas Xiaomi</string>
     <string name="authenticator_label">Xiaomi</string>
-    <string name="login_xiaomi_account">Login</string>
-    <string name="nickname">Nickname</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="account">Account</string>
-    <string name="account_hint_text">Email/Phone number/MiTalk ID</string>
-    <string name="account_banner">"Login Xiaomi Account, Enjoy MIUI &amp; MiTalk"</string>
-    <string name="new_account">Create account</string>
-    <string name="registered_account">Username has been registered</string>
-    <string name="bad_username">Username contains invalid characters</string>
-    <string name="bad_verification">Verification has failed</string>
-    <string name="bad_vkey">Wrong verify code</string>
-    <string name="bad_authentication">Authentication failed, bad username or password supplied</string>
-    <string name="too_many_times">Registered too many times</string>
-    <string name="email_not_verified">E-mail unverified</string>
-    <string name="terms_not_agreed">You must agree to the terms and conditions</string>
-    <string name="account_deleted">Account has been deleted</string>
-    <string name="account_disabled">Account has been disabled</string>
-    <string name="service_disabled">Service has been disabled</string>
-    <string name="service_unavailable">Service currently unavailable</string>
-    <string name="network_error">Network connection error</string>
-    <string name="has_bound">Already exists</string>
-    <string name="nickname_exist">Nickname already exists</string>
-    <string name="has_nick">Account already has a nickname</string>
-    <string name="unknown">Unknown error occurred</string>
-    <string name="register_success">successfully registered</string>
-    <string name="by_email">Register by Email </string>
-    <string name="by_mobile">Register by mobile phone</string>
-    <string name="mobile">Mobile</string>
-    <string name="vercode">Verify code</string>
-    <string name="get_vercode">Get verify code</string>
-    <string name="mobile_hint_text">Please input valid mobile number</string>
-    <string name="vercode_hint_text">Please input sms verify code</string>
-    <string name="nickname_hint_text">Please input nickname</string>
-    <string name="password_hint_text">6~16 chars</string>
-    <string name="password_hint">Input password </string>
-    <string name="show_password">Show password</string>
-    <string name="create_now">Create now</string>
-    <string name="my_account">My Account</string>
-    <string name="must_input">required</string>
-    <string name="login_account_suggestion1">Computer user, visit</string>
+    <string name="login_xiaomi_account">Conectar</string>
+    <string name="nickname">Apodo:</string>
+    <string name="username">Usuario:</string>
+    <string name="password">Contraseña:</string>
+    <string name="account">Cuenta:</string>
+    <string name="account_hint_text">Email/Núm.telf/MiTalk ID</string>
+    <string name="account_banner">Acceso a la cuenta Xiaomi. Disfrute de MIUI y MiTalk</string>
+    <string name="new_account">Crear una cuenta</string>
+    <string name="registered_account">Cuenta registrada</string>
+    <string name="bad_username">Formato de nombre de usuario incorrecto</string>
+    <string name="bad_verification">Registro de información incorrecto</string>
+    <string name="bad_vkey">Código de verificación incorrecto</string>
+    <string name="bad_authentication">Nombre de usuario y contraseña no coinciden</string>
+    <string name="too_many_times">Registrado demasiadas veces</string>
+    <string name="email_not_verified">El correo electrónico no ha sido verificado</string>
+    <string name="terms_not_agreed">Debe estar de acuerdo con los términos MIUI</string>
+    <string name="account_deleted">Cuenta eliminada</string>
+    <string name="account_disabled">Cuenta deshabilitada</string>
+    <string name="service_disabled">Servicio detenido</string>
+    <string name="service_unavailable">Servicio no disponible</string>
+    <string name="network_error">Fallo de conexión de red</string>
+    <string name="has_bound">Repita vinculante</string>
+    <string name="nickname_exist">Nombre de usuario no disponible</string>
+    <string name="has_nick">La cuenta ya tiene un nombre de usuario</string>
+    <string name="unknown">Error desconocido</string>
+    <string name="register_success">Cuenta registrada con éxito</string>
+    <string name="by_email">Usar Email</string>
+    <string name="by_mobile">Usar móbil</string>
+    <string name="mobile">Móbil</string>
+    <string name="vercode">Código</string>
+    <string name="get_vercode">Obtener verificacación del código</string>
+    <string name="mobile_hint_text">Introduzca número de teléfono móvil</string>
+    <string name="vercode_hint_text">Introduzca el código obtenido vía mensaje</string>
+    <string name="nickname_hint_text">Introduzca nombre de usuario</string>
+    <string name="password_hint_text">6~16 caracteres</string>
+    <string name="password_hint">Introducir contraseña</string>
+    <string name="show_password">Mostras contraseña</string>
+    <string name="create_now">Crear cuenta</string>
+    <string name="my_account">Mi cuenta MIUI</string>
+    <string name="must_input">Requerido</string>
+    <string name="login_account_suggestion1">Desde el ordenador, visite:</string>
     <string name="login_account_suggestion2">passport.xiaomi.com</string>
-    <string name="user_agreement1">"By creating account, you accepted "</string>
-    <string name="user_agreement2">"user agreement"</string>
-    <string name="user_agreement3">" and "</string>
-    <string name="user_agreement4">"privacy policy"</string>
-    <string name="loging_on">Logging…</string>
-    <string name="invalid_phone_number">Invalid phone number</string>
-    <string name="invalid_vercode">Please input verify code</string>
-    <string name="invalid_nickname">Nickname exists or invalid</string>
-    <string name="invalid_password">Password must be 6~16 chars</string>
-    <string name="forget_password">Forget password</string>
-    <string name="sending_request">Sending request</string>
-    <string name="succeed">Done</string>
-    <string name="settings_safetylegal_activity_unreachable">Your phone is not connected to a data service. To view this information now, go to %s from any computer connected to the Internet.</string>
-    <string name="account_expired_dialog_title">Account expired</string>
-    <string name="account_expired_dialog_message">Account verification has expired, please login again to ensure the security of your account!</string>
+    <string name="user_agreement1">"Al crear la cuenta, usted acepta "</string>
+    <string name="user_agreement2">acuerdo del usuario</string>
+    <string name="user_agreement3">" y "</string>
+    <string name="user_agreement4">política de privacidad</string>
+    <string name="loging_on">Registrando...</string>
+    <string name="invalid_phone_number">Número de teléfono móvil no válido</string>
+    <string name="invalid_vercode">Por favor introduce el código a verificar</string>
+    <string name="invalid_nickname">Nombre de usuario no disponible o no es válido</string>
+    <string name="invalid_password">La contraseña debe ser de 6~16 caracteres</string>
+    <string name="forget_password">He olvidado mi contraseña</string>
+    <string name="sending_request">Enviar solicitud</string>
+    <string name="succeed">Listo</string>
+    <string name="settings_safetylegal_activity_unreachable">El teléfono no está conectado a un servicio de datos. Para ver esta información ahora, vaya a %s desde cualquier ordenador conectado a Internet.</string>
+    <string name="account_expired_dialog_title">Cuenta caducada</string>
+    <string name="account_expired_dialog_message">Su cuenta Xiaomi ha caducado, para acceder debe crear una cuenta nueva</string>
 
     <!-- for Xiaomi Account -->
-    <string name="xiaomi_account">Xiaomi Account</string>
+    <string name="xiaomi_account">Cuenta Xiaomi</string>
 
-    <string name="xiaomi_remove_account_title">Remove Xiaomi account</string>
-    <string name="xiaomi_remove_account_message">Removing this account will also delete Xiaomi service data, Market and MiTalk applications (Contacts, SMS and Call logs are retained), are you sure you want to remove?</string>
+    <string name="xiaomi_remove_account_title">Eliminar cuenta Xiaomi</string>
+    <string name="xiaomi_remove_account_message">Eliminar esta cuenta hará imposible acceder a los datos de Xiaomi, esta seguro de querer eliminarla?</string>
 
-    <string name="user_id">Account ID</string>
-    <string name="user_detail">My Card</string>
-    <string name="user_nickname">Nickname</string>
-    <string name="user_nickname_title">Complete username</string>
-    <string name="user_nickname_description">Username is used for forum and most of Xiaomi services, please complete it</string>
-    <string name="user_nickname_hint">Support English and Chinese</string>
+    <string name="user_id">ID Cuenta</string>
+    <string name="user_detail">Mi Perfil</string>
+    <string name="user_nickname">Nick</string>
+    <string name="user_nickname_title">Nombre de usuario completo</string>
+    <string name="user_nickname_description">El nombre de usuario se usa para diferentes servicio Xiaomi, Por favor complételo</string>
+    <string name="user_nickname_hint">Idiomas Inglés y Chino</string>
     <string name="user_nickname_button_verify">OK</string>
 
     <string name="user_email">Email</string>
-    <string name="user_email_title">Bind E-mail address</string>
-    <string name="user_email_description">E-mail address for login and account recovery</string>
-    <string name="user_email_hint">Input your E-mail address here</string>
-    <string name="user_email_button_verify">Verification</string>
-    <string name="user_email_format_error">E-mail address contains invalid characters</string>
+    <string name="user_email_title">Añadir dirección de Email</string>
+    <string name="user_email_description">Dirección de Email para conectarse y recuperar la cuenta</string>
+    <string name="user_email_hint">Introduce tu dirección de Email aquí</string>
+    <string name="user_email_button_verify">Verificar</string>
+    <string name="user_email_format_error">La dirección de Email contiene caracteres no válidos</string>
 
-    <string name="user_phone">Phone</string>
-    <string name="user_phone_title">Bind phone number</string>
-    <string name="user_phone_description">Phone number for login and account recovery</string>
-    <string name="user_phone_hint">Input your phone number here</string>
-    <string name="user_phone_button_verify">Verification</string>
-    <string name="user_phone_format_error">Phone number contains invalid characters</string>
+    <string name="user_phone">Teléfono</string>
+    <string name="user_phone_title">Añadir número de teléfono</string>
+    <string name="user_phone_description">Número de teléfono para conectarse y recuperar la cuenta</string>
+    <string name="user_phone_hint">Introduce tu número de teléfono aquí</string>
+    <string name="user_phone_button_verify">Verificar</string>
+    <string name="user_phone_format_error">El número de teléfono contiene caracteres no válidos</string>
 
     <string name="user_mitalk_sync_title">MiTalk</string>
-    <string name="user_mitalk_sync_summary">MiTalk allows you to send messages, pictures and chat with friends</string>
+    <string name="user_mitalk_sync_summary">MiTalk te permite enviar mensajes, imágenes y chatear con tus amigos</string>
 
-    <string name="user_unbind">unbind</string>
+    <string name="user_unbind">Borrar usuario</string>
 
-    <string name="sending_bind_request">Request has been sent</string>
-    <string name="bind_phone_dialog_title">Bind phone</string>
-    <string name="bind_phone_dialog_message">You will receive an SMS confirmation with a verification code to validate your account</string>
-    <string name="bind_email_dialog_title">Bind E-mail</string>
-    <string name="bind_email_dialog_message">You will receive an E-mail confirmation with a verification code to validate your account</string>
+    <string name="sending_bind_request">Solicitud enviada</string>
+    <string name="bind_phone_dialog_title">Confirmar por teléfono</string>
+    <string name="bind_phone_dialog_message">Recibirás un SMS de confirmación con un código de verificación para validar tu cuenta</string>
+    <string name="bind_email_dialog_title">Confirmar por Email</string>
+    <string name="bind_email_dialog_message">Recibirás un E-mail de confirmación con un código de verificación para validar tu cuenta</string>
     <string name="bind_dialog_button">OK</string>
 
-    <string name="enable_mitalk_dialog_title">Enable MiTalk sync</string>
-    <string name="enable_mitalk_dialog_message">Will log in MiTalk with system account. If it is inconsistent with current MiTalk ID, your data will be cleared. Are you sure?</string>
-    <string name="disable_mitalk_dialog_title">Disable MiTalk sync</string>
-    <string name="disable_mitalk_dialog_message">"You will not be able to chat with your friends via MiTalk in Contacts, are you sure to turn off the sync of MiTalk and Contacts? \ n Tip: After turning off, you may change or cancel your account in MiTalk settings"</string>
+    <string name="enable_mitalk_dialog_title">Habilitar sincronización MiTalk</string>
+    <string name="enable_mitalk_dialog_message">Va a iniciar sesión en MiTalk con su cuenta de sistema. Si sales de este ID MiTalk, sus datos se borrarán. ¿Está seguro?</string>
+    <string name="disable_mitalk_dialog_title">Deshabilitar sincronización MiTalk</string>
+    <string name="disable_mitalk_dialog_message">"Usted no será capaz de chatear con tus amigos a través de MiTalk, está seguro de desactivar la sincronización de MiTalk y contactos? n Consejo: Después de apagar, puede cambiar o cancelar su cuenta en la configuración de MiTalk."</string>
 
-    <string name="logoff_account_label">Log off</string>
+    <string name="logoff_account_label">Desconectar</string>
 
-    <string name="basic_info"> Basic information </string>
-    <string name="sync_info"> Sync </string>
-    <string name="login"> Login</string>
-    <string name="next"> Next</string>
-    <string name="prev"> Back</string>
+    <string name="basic_info">Informacion básica</string>
+    <string name="sync_info">Sincronizar</string>
+    <string name="login">Conectar</string>
+    <string name="next">Siguiente</string>
+    <string name="prev">Volver</string>
 </resources>
