--- a/src/packages/apps/Compass/res/values/strings.xml
+++ b/src/packages/apps/Compass/res/values/strings.xml
@@ -2,12 +2,18 @@
 <resources
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <string name="app_label">Compass</string>
-    <string name="getting_location">Getting location...</string>
-    <string name="cannot_get_location">Cannot get your location</string>
+    <string name="app_label">Brújula</string>
+    <string name="getting_location">Obteniendo ubicación...</string>
+    <string name="cannot_get_location">No se puede obtener su ubicación</string>
     <string name="location_north">%s N</string>
     <string name="location_south">%s S</string>
     <string name="location_east">%s E</string>
     <string name="location_west">%s W</string>
+    <string name="menu_calibrate">Calibrar</string>
+    <string name="dialog_title">Cancelar calibración</string>
+    <string name="dialog_content">La brújula no terminó de calibrar，la medición puede ser incorrecta. ¿Seguro que quiere cancelar?</string>
+    <string name="calibrate_success">Calibración realizada</string>
+    <string name="user_guide_calibrate">Pulsa MENU para calibrar la brújula</string>
+    <string name="toast_accuracy_low">La medición es pobre, pulse MENU para calibrar la brújula</string>
 
 </resources>
