--- a/src/packages/apps/Exchange/res/values-es/strings.xml
+++ b/src/packages/apps/Exchange/res/values-es/strings.xml
@@ -25,8 +25,8 @@
     <string name="meeting_when" msgid="2765696159697448656">"Cuándo: <xliff:g id="WHEN">%s</xliff:g>"</string>
     <string name="meeting_where" msgid="5992367535856553079">"Dónde: <xliff:g id="WHERE">%s</xliff:g>"</string>
     <string name="meeting_recurring" msgid="3134262212606714023">"Cuándo: <xliff:g id="EVENTDATE">%s</xliff:g> (periódico)"</string>
-    <string name="meeting_allday" msgid="6696389765484663513">"Cuando: <xliff:g id="EVENTDATE">%s</xliff:g> (todo el día)"</string>
-    <string name="meeting_allday_recurring" msgid="2320264182781062684">"Cuando: <xliff:g id="EVENTDATE">%s</xliff:g> (todo el día, periódico)"</string>
+    <string name="meeting_allday" msgid="6696389765484663513">"Cuándo: <xliff:g id="EVENTDATE">%s</xliff:g> (todo el día)"</string>
+    <string name="meeting_allday_recurring" msgid="2320264182781062684">"Cuándo: <xliff:g id="EVENTDATE">%s</xliff:g> (todo el día, periódico)"</string>
     <string name="notification_exchange_calendar_added" msgid="6823659622379350159">"Se ha añadido un calendario de Exchange."</string>
     <string name="app_name" msgid="5316597712787122829">"Servicios de Exchange"</string>
     <string name="exception_cancel" msgid="6160117429428313805">"Este evento se ha cancelado el día: <xliff:g id="DATE">%s</xliff:g>"</string>
