MIUI西班牙 translations added.

--- a/src/packages/apps/FileExplorer/res/values/strings.xml
+++ b/src/packages/apps/FileExplorer/res/values/strings.xml
@@ -1,94 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="added_favorite">Added to Favorites</string>
-    <string name="app_name">File Explorer</string>
-    <string name="cancel">Cancel</string>
-    <string name="category_all">All</string>
+    <string name="added_favorite">Añadido a favoritos</string>
+    <string name="app_name">Explorador</string>
+    <string name="cancel">Cancelar</string>
+    <string name="category_all">Todo</string>
     <string name="category_apk">APKs</string>
     <string name="category_document">Docs</string>
-    <string name="category_favorite">Favorites</string>
-    <string name="category_music">Music</string>
-    <string name="category_other">Misc</string>
-    <string name="category_picture">Pics</string>
-    <string name="category_theme">Themes</string>
-    <string name="category_video">Videos</string>
+    <string name="category_favorite">Favoritos</string>
+    <string name="category_music">Música</string>
+    <string name="category_other">Otros</string>
+    <string name="category_picture">Fotos</string>
+    <string name="category_theme">Temas</string>
+    <string name="category_video">Vídeos</string>
     <string name="category_zip">Zips</string>
-    <string name="confirm">OK</string>
-    <string name="confirm_know">OK</string>
-    <string name="enable_sd_card">SD card is not available, please connect one</string>
-    <string name="error_info_cant_send_folder">Unable to send the folder</string>
-    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
-    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
-    <string name="file_info_canread">Readable:</string>
-    <string name="file_info_canwrite">Writable:</string>
-    <string name="file_info_ishidden">Hidden:</string>
-    <string name="file_info_location">Path:</string>
-    <string name="file_info_modified">Modified:</string>
-    <string name="file_info_size">Size:</string>
-    <string name="file_size">%d Bytes</string>
-    <string name="install_failed">Installation failed</string>
-    <string name="install_successful">Installation successful</string>
-    <string name="instruction">Enter the following address into your FTP Client:</string>
-    <string name="instruction_pre">Start service to enable FTP server</string>
-    <string name="menu_item_search">Search</string>
-    <string name="menu_item_sort">Sort by</string>
-    <string name="menu_item_sort_date">Date</string>
-    <string name="menu_item_sort_name">Name</string>
-    <string name="menu_item_sort_size">Size</string>
-    <string name="menu_item_sort_type">Type</string>
-    <string name="new_folder_name">New folder</string>
+    <string name="confirm">Aceptar</string>
+    <string name="confirm_know">Ok</string>
+    <string name="enable_sd_card">No se puede acceder a la tarjeta SD.</string>
+    <string name="error_info_cant_send_folder">No se pueden enviar carpetas</string>
+    <string name="fail_to_create_folder">No se pudo crear la carpeta, la carpeta ya existe.</string>
+    <string name="fail_to_rename">No se pudo renombrar, el nombre ya existe.</string>
+    <string name="file_info_canread">Lectura</string>
+    <string name="file_info_canwrite">Escritura</string>
+    <string name="file_info_ishidden">Oculto</string>
+    <string name="file_info_location">Ruta</string>
+    <string name="file_info_modified">Creado</string>
+    <string name="file_info_size">Tamaño</string>
+    <string name="file_size">%d bytes</string>
+    <string name="install_failed">Instalación fallida</string>
+    <string name="install_successful">Instalación con exito</string>
+    <string name="instruction">Introduzca esta dirección en su cliente FTP:</string>
+    <string name="instruction_pre">Iniciar servicio para habilitar el servidor FTP</string>
+    <string name="menu_item_search">Búsqueda</string>
+    <string name="menu_item_sort">Ordenar</string>
+    <string name="menu_item_sort_date">Fecha</string>
+    <string name="menu_item_sort_name">Nombre</string>
+    <string name="menu_item_sort_size">Tamaño</string>
+    <string name="menu_item_sort_type">Tipo</string>
+    <string name="new_folder_name">Nueva carpeta</string>
     <string name="no">No</string>
-    <string name="no_file">No files</string>
-    <string name="no_wifi">No WLAN network</string>
-    <string name="notif_server_starting">FTP Server started</string>
-    <string name="notif_title">FTP Server</string>
-    <string name="operation_cancel">Cancel</string>
-    <string name="operation_cancel_selectall">Deselect All</string>
-    <string name="operation_copy">Copy</string>
-    <string name="operation_copy_path">Copy file path</string>
-    <string name="operation_create_folder">New folder</string>
-    <string name="operation_create_folder_message">Enter folder name</string>
-    <string name="operation_delete">Delete</string>
-    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
-    <string name="operation_deleting">Deleting...</string>
-    <string name="operation_favorite">Add to Favorites</string>
-    <string name="operation_hide_sys">Hide hidden files</string>
-    <string name="operation_info">Details</string>
-    <string name="operation_move">Move</string>
-    <string name="operation_moving">Moving...</string>
-    <string name="operation_paste">Paste</string>
-    <string name="operation_pasting">Pasting...</string>
-    <string name="operation_refresh">Refresh</string>
-    <string name="operation_rename">Rename</string>
-    <string name="operation_rename_message">Enter a new name</string>
-    <string name="operation_selectall">Select All</string>
-    <string name="operation_send">Send</string>
-    <string name="operation_show_sys">Show hidden files</string>
-    <string name="operation_unfavorite">Remove from Favorites</string>
-    <string name="removed_favorite">Removed from Favorites</string>
-    <string name="sd_card_available">Space available:<xliff:g id="available_size">%1$s</xliff:g></string>
-    <string name="sd_card_size">SD card:<xliff:g id="total_size">%1$s</xliff:g></string>
-    <string name="sd_folder">SD card</string>
-    <string name="search_hint">Search Files</string>
-    <string name="search_title">Search Files</string>
-    <string name="start_server">Start Service</string>
-    <string name="stop_server">Stop Service</string>
-    <string name="storage_warning">External storage is not available or cannot be read</string>
-    <string name="tab_category">Browse</string>
+    <string name="no_file">No hay archivos</string>
+    <string name="no_wifi">No hay red WiFi</string>
+    <string name="notif_server_starting">Iniciando servidor FTP</string>
+    <string name="notif_title">Iniciado servidor FTP</string>
+    <string name="operation_cancel">Cancelar</string>
+    <string name="operation_cancel_selectall">Anular selección</string>
+    <string name="operation_copy">Copiar</string>
+    <string name="operation_copy_path">Copiar ruta de archivo</string>
+    <string name="operation_create_folder">Nueva carpeta</string>
+    <string name="operation_create_folder_message">Introduzca nombre a la carpeta</string>
+    <string name="operation_delete">Borrar</string>
+    <string name="operation_delete_confirm_message">¿Confirma la eliminación?</string>
+    <string name="operation_deleting">Eliminando…</string>
+    <string name="operation_favorite">Añadir a \"Favoritos\"</string>
+    <string name="operation_hide_sys">Ocultar archivos de sistema y caché</string>
+    <string name="operation_info">Detalles</string>
+    <string name="operation_move">Cortar</string>
+    <string name="operation_moving">Moviendo…</string>
+    <string name="operation_paste">Pegar</string>
+    <string name="operation_pasting">Copiando…</string>
+    <string name="operation_refresh">Actualizar</string>
+    <string name="operation_rename">Renombrar</string>
+    <string name="operation_rename_message">Introduzca un nuevo nombre</string>
+    <string name="operation_selectall">Seleccionar todo</string>
+    <string name="operation_send">Enviar</string>
+    <string name="operation_show_sys">Mostrar archivos de sistema y caché</string>
+    <string name="operation_unfavorite">Quitar de Favoritos</string>
+    <string name="removed_favorite">Quitado de Favoritos</string>
+    <string name="sd_card_available">Espacio disponible:<xliff:g id="available_size">%1$s</xliff:g></string>
+    <string name="sd_card_size">Tarjeta SD:<xliff:g id="total_size">%1$s</xliff:g></string>
+    <string name="sd_folder">Tarjeta SD</string>
+    <string name="search_hint">Buscar Archivos</string>
+    <string name="search_title">Buscar Archivos</string>
+    <string name="start_server">Iniciar Servidor</string>
+    <string name="stop_server">Detener servidor</string>
+    <string name="storage_warning">Almacenamiento externo no disponible.</string>
+    <string name="tab_category">Explorar</string>
     <string name="tab_remote">FTP</string>
-    <string name="tab_sd">SD card</string>
-    <string name="wifi_state">WLAN Status</string>
-    <string name="yes">Yes</string>
-    <string name="dialog_select_type">Select file type</string>
-    <string name="dialog_type_text">Text</string>
+    <string name="tab_sd">Tarjeta SD</string>
+    <string name="wifi_state">Estado WiFi</string>
+    <string name="yes">Sí</string>
+    <string name="dialog_select_type">Seleccione tipo de archivo</string>
+    <string name="dialog_type_text">Texto</string>
     <string name="dialog_type_audio">Audio</string>
-    <string name="dialog_type_video">Video</string>
-    <string name="dialog_type_image">Image</string>
-    <string name="favorite_photo">Photo</string>
-    <string name="favorite_sdcard">SD Card</string>
-    <string name="favorite_screen_cap">MIUI Screen Shot</string>
-    <string name="favorite_ringtone">Ringtone</string>
-    <string name="multi_select_title" >Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
-    <string name="file_loading">Loading...</string>
+    <string name="dialog_type_video">Vídeo</string>
+    <string name="dialog_type_image">Imagen</string>
+    <string name="favorite_photo">Fotos</string>
+    <string name="favorite_sdcard">Tarjeta SD</string>
+    <string name="favorite_screen_cap">Capturas de pantalla</string>
+    <string name="favorite_ringtone">Tonos</string>
+    <string name="multi_select_title" >Seleccionados <xliff:g id="number">%1$s</xliff:g> item(s)</string>
+    <string name="file_loading">Cargando…</string>
 </resources>
